Adicionado novos conteudos dentro da página revisao.html

--- a/revisao.html
+++ b/revisao.html
@@ -28,6 +28,7 @@
     </p>
 
     <h3>Lista de nomes</h3>
+
     <ul>
       <li>Maria</li>
       <li>Joao</li>
@@ -36,27 +37,92 @@
 
     <h3>Lista de tarefas</h3>
     <ol>
-        <li>Acordar</li>
-        <li>Tomar café</li>
-        <li>Escovar os dentes</li>
+      <li>Acordar</li>
+      <li>Tomar café</li>
+      <li>Escovar os dentes</li>
     </ol>
 
     <h3>Lista de descrição</h3>
     <dl>
-        <dt>Afazeres</dt>
-        <dd>Acordar</dd>
-        <dd>Tomar Café</dd>
-        <dd>Escovar os dentes</dd>
+      <dt>Afazeres</dt>
+      <dd>Acordar</dd>
+      <dd>Tomar Café</dd>
+      <dd>Escovar os dentes</dd>
 
-        <dt>Funções atribuidas</dt>
-        <dd>Funcao 1</dd>
-        <dd>Funcao 2</dd>
-        <dd>Funcao 3</dd>
+      <dt>Funções atribuidas</dt>
+      <dd>Funcao 1</dd>
+      <dd>Funcao 2</dd>
+      <dd>Funcao 3</dd>
 
-        <dt>Afazeres</dt>
-        <dd>Acordar</dd>
-        <dd>Tomar Café</dd>
-        <dd>Escovar os dentes</dd>
+      <dt>Afazeres</dt>
+      <dd>Acordar</dd>
+      <dd>Tomar Café</dd>
+      <dd>Escovar os dentes</dd>
     </dl>
+
+    <h2>Trabalhando com imagens</h2>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia,
+      explicabo doloremque ratione dolorum quaerat nemo doloribus eligendi
+      molestias, tenetur est voluptas maiores illum accusamus ad ut magni
+      nostrum sit optio!
+    </p>
+    <h3>Imagem da internet</h3>
+    <img
+      src="https://sindpd.org.br/sindpd/upload/news/1638378752874.jpg"
+      width="500"
+      alt="Texto alternativo"
+      title="Minha descrição da imagem aqui"
+    />
+
+    <h3>Imagem direto do site</h3>
+    <img
+      src="images/paisagem.webp"
+      width="500"
+      alt="texto alternativo"
+      title="Titulo no ponteiro do mouse"
+    />
+
+    <h2>Trabalhando com tabelas</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+      mollitia consequatur saepe quia illo libero, voluptate odio aut veniam qui
+      fuga. Eveniet ipsum ullam quibusdam odit. Cumque doloremque rerum sit?
+    </p>
+
+    <h3>Tabela de produtos</h3>
+    <table border="1" width="300">
+      <thead>
+        <tr>
+          <th>Produtos</th>
+          <th>Qtde</th>
+          <th>Preço</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+            <td>Mouse</td>
+            <td>10</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <td>Teclado</td>
+            <td>27</td>
+            <td>100</td>
+        </tr>
+        <tr>
+            <td>Monitor</td>
+            <td>37</td>
+            <td>1200</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+            <td>Total</td>
+            <td>74</td>
+            <td>1350</td>
+        </tr>
+      </tfoot>
+    </table>
   </body>
 </html>
